Fix spacing on mobile viewports for footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,8 +26,9 @@
         padding: 0 0 0 0;
     }
     #root .footer {
-        position: relative;
-        top: 4rem;
-        padding: 4rem 1rem;
+        /* position: relative;
+        top: 4rem; */
+        padding: 0rem 1rem;
+        margin-bottom: 4rem;
     }
 }
