--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -91,7 +91,6 @@
 
     .homepage {
         position: relative;
-        margin-bottom: 30vh;
     }
 
     .homepage .page-section {
